@startuml

title __TIPOS's Class Diagram__\n

  namespace br.com.bancoms.components.tecladoComponent {
    namespace tipos {
      class br.com.bancoms.components.tecladoComponent.tipos.DoubleTeclado {
          + DoubleTeclado()
          + verificarValor()
          # entrar()
          # inserirValor()
          # limpar()
          # setFieldValor()
      }
    }
  }
  

  namespace br.com.bancoms.components.tecladoComponent {
    namespace tipos {
      class br.com.bancoms.components.tecladoComponent.tipos.IntegerTeclado {
          + IntegerTeclado()
          + verificarValor()
          # entrar()
          # inserirValor()
          # limpar()
          # setFieldValor()
      }
    }
  }
  

  namespace br.com.bancoms.components.tecladoComponent {
    namespace tipos {
      abstract class br.com.bancoms.components.tecladoComponent.tipos.Teclado {
          # limiteCaracteres : int
          - action_entrar : String
          - action_limpar : String
          - fieldVinculado : TextField
          - textoField : String
          + anexarEvento()
          + getTextoField()
          + handle()
          {abstract} + verificarValor()
          # getFieldVinculado()
          # getLimiteCaracteres()
          # setFieldVinculado()
          # setLimiteCaracteres()
          # setTextoField()
          {abstract} ~ entrar()
          {abstract} ~ inserirValor()
          {abstract} ~ limpar()
          {abstract} ~ setFieldValor()
          - aceitarValor()
          - eventos()
      }
    }
  }
  

  namespace br.com.bancoms.components.tecladoComponent {
    namespace tipos {
      enum TecladoEvent {
        DOUBLE
        INTEGER
      }
    }
  }
  

  br.com.bancoms.components.tecladoComponent.tipos.DoubleTeclado -up-|> br.com.bancoms.components.tecladoComponent.tipos.Teclado
  br.com.bancoms.components.tecladoComponent.tipos.IntegerTeclado -up-|> br.com.bancoms.components.tecladoComponent.tipos.Teclado
  br.com.bancoms.components.tecladoComponent.tipos.Teclado .up.|> javafx.event.EventHandler
  br.com.bancoms.components.tecladoComponent.tipos.Teclado +-down- br.com.bancoms.components.tecladoComponent.tipos.Teclado.TecladoEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
